Bug 460058: SEGV when trying to view plain text emails (with missing content type). r+sr=bienvenu