mailnews/mime/src/mimei.cpp
@@ -224,6 +224,9 @@ MimeObjectClass *
 mime_locate_external_content_handler(const char *content_type,
                                      contentTypeHandlerInitStruct  *ctHandlerInfo)
 {
+  if (!content_type || !*(content_type)) // null or emtpy content type
+    return nsnull;
+
   MimeObjectClass               *newObj = NULL;
   nsresult rv;
 
